# ROP-Audio-Vibration

./: Ampitude_Envelope.py  README.md  driver_test.py  output.txt  run.py  test.py
esp-driver/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp-driver/components/linger/: CMakeLists.txt  linger.c  linger.h
esp-driver/components/spin_control/: CMakeLists.txt  spin_control.c  spin_control.h
esp-driver/main/: CMakeLists.txt  Kconfig.projbuild  sd_card_example_main.c
feature/: Ampitude_Envelope.py  RMS_energy.py  event.py  test_event.py
new_algorithm/: batch_test.txt  gen_narrowband_noise.py  gen_square_wave.py  output_v2.txt  verison2.py  version1.py
phy/: ser_driver.py
test/: envelope_chatgpt.py  gen_noise.py  output.txt  output_event.txt  output_stft.txt  output_v1.txt  output_v2.txt  showwave.py  test_amplitude_envelope.py  test_event.py  test_fft.py  test_pyin.py  test_stft.py  wave1.py
version4/code/: version4_music_stim.py  version4_noise.py
version4/forSDcard/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
version4/music_stim_txt/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
version4/music_wav/: readme.txt
